--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,9 +35,10 @@ services:
       start_period: 10s
 
   moeflow-backend:
-    image: ${GHCR_DOMAIN}/kozzzx/moeflow-backend:${MOEFLOW_BACKEND_VERSION}
+    build: ../moeflow-backend
     restart: unless-stopped
     volumes:
+      - ../moeflow-backend:/app
       - ./storage:/app/storage
       - ./logs/moeflow-backend:/app/logs
     environment:
@@ -51,12 +52,13 @@ services:
         condition: service_healthy
       moeflow-mongodb:
         condition: service_healthy
-    command: gunicorn -t 120 -w 4 -b 0.0.0.0:5000 "app:create_app()"
+    command: gunicorn -t 120 --reload -w 4 -b 0.0.0.0:5000 "app:create_app()"
 
   moeflow-celery-default:
     image: ${GHCR_DOMAIN}/kozzzx/moeflow-backend:${MOEFLOW_BACKEND_VERSION}
     restart: unless-stopped
     volumes:
+      - ../moeflow-backend:/app
       - ./storage:/app/storage
       - ./logs/moeflow-celery-default:/app/logs
     environment:
@@ -66,12 +68,13 @@ services:
     networks:
       - default
     depends_on: *backend-deps
-    command: celery -A app.celery worker -n default --loglevel=info
+    command: celery -A app.celery worker -n default --loglevel=debug
 
   moeflow-celery-output:
     image: ${GHCR_DOMAIN}/kozzzx/moeflow-backend:${MOEFLOW_BACKEND_VERSION}
     restart: unless-stopped
     volumes:
+      - ../moeflow-backend:/app
       - ./storage:/app/storage
       - ./logs/moeflow-celery-output:/app/logs
     environment:
@@ -81,7 +84,7 @@ services:
     networks:
       - default
     depends_on: *backend-deps
-    command: celery -A app.celery worker -Q output -n output --loglevel=info
+    command: celery -A app.celery worker -Q output -n output --loglevel=debug
 
   moeflow-frontend:
     image: ${GHCR_DOMAIN}/kozzzx/moeflow-frontend:${MOEFLOW_FRONTEND_VERSION}
